objects/AutoClose_ProductFeatureIgnoreList__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Auto Close should not work for the Email Hub Products having Email Address listed in this custom setting</description>
    <fields>
        <fullName>EmailAddress__c</fullName>
        <label>EmailAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Feature__c</fullName>
        <label>Product_Feature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Display__c</fullName>
        <label>Sender Display</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AutoClose_ProductFeatureIgnoreList</label>
</CustomObject>